assets/stylesheets/previews_mobile.scss
 .mobile-view .topic-list {
  .topic-thumbnail {
    padding: 0;
  }
  .topic-details {
    max-height: initial;
    position: relative;
  }
  div + .topic-details {
    padding-left: 10px;
    min-height: 45px;
    overflow: hidden;
  }
  .topic-excerpt {
    max-height: initial;
    width: 100%;
  }
  .topic-category {
    margin-top: 6px;
    display: block;
  }
  .topic-actions {
    margin-top: 5px;
    float: none;
  }
  .list-button {
    font-size: 1em;
    padding: 0 10px 0 0px;
  }
  .like-count {
    font-size: 1em;
    line-height: 1em;
    float: left;
    margin-right: 8px;
  }
  .list-button i {
    vertical-align: top;
  }
  .num.activity {
    float: right;
  }
img.thumbnail:not(.tiles-thumbnail) {
    max-width:80px;
    max-height:80px;
  }

  .discourse-tags {
    float: initial;
    clear: initial;
    margin-right: 30px;
    flex-wrap: wrap;
  }
}

//tiles styling  specific styling
.mobile-view #list-area.tiles-style {

  .tiles-grid {
    display:block;
    .topic-list-item-separator {
      display: none;
    }
  }

  .tiles-grid-sizer,
  .tiles-grid-item {
    // 1 column on all phones
    width: 100%;
  }

  .tiles-gutter-sizer {
     width: 6px;
   }

  .tiles-grid-item {
    box-sizing: border-box;
    cursor: pointer;
    float:top;
    margin-bottom: 6px;
    border-radius: 3px;
    padding:10px;
    display: grid;
    grid-template-columns: 1 1 1 1 auto;
    grid-template-rows: auto auto auto auto auto;
    grid-template-areas:
     "theader theader theader theader theader"
     "photo photo photo photo photo"
     "details details details details details"
     "tags tags tags tags tags"
     "meta meta meta meta actions"
  }

  .tiles-grid-item:hover {
    background-color: darken($secondary, 2%);
    lighten: ($primary, 70%);
  }

  .tiles-grid-item:active {
  }

  .topic-header-grid {
    grid-area: theader;
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    grid-template-areas:
    "title posters"
    "category posters"
  }

  .topic-title {
    font-size: 1.143em;
    grid-area: title;
    padding: 0 0 0 0;

     .link-top-line {
       flex: 1 1 auto;
     }

    a.title {
      color: $primary;
    }

    a.topic-featured-link {
      display: block;
      padding-left: 0;
      padding-top: 3px;
    }

    .badge-notification.new-topic {
      vertical-align: top;
      display: inline-block;
    }
  }

  .topic-users {
    grid-area: posters;
    padding: 0 0 5px 5px;

    .inline {
      float: right;
      line-height: 24px;
      text-align: right;

      .avatar {
        padding: 0 0 0 0px;
        margin-right: -2px;
        width: 22px;
        height: 22px;
      }
    }
  }

  .topic-statuses {
    float: right;
  }

  .topic-category{
    grid-area: category;
    padding: 0 0 4px 0;
  }

  .topic-thumbnail{
    grid-area: photo;
    padding: 0 0 4px 0;
  }

  .thumbnail {
    .no-thumbnail {
      display: none;
    }
  }

  img.thumbnail {
    }

  .topic-details {
    grid-area: details;
    padding: 0 0 4px 0;
    min-height: 0px;

    .topic-excerpt {
      line-height: 1.3;
      max-height: 200px;
      max-width: 100%;
      float: left;
      clear: both;
    }
  }

  .topic-tags {
    grid-area: tags;
  }

  .topic-meta{
    grid-area: meta;
  }

  .topic-poster-names a {
    font-size: 0.9em;
  }

  div.sub, span.sub {
    padding: 0;
    font-size: 12px;
  }

  .topic-list{
    padding-top: 10px;
  }

  a.topic-featured-link {
    display: block;
    padding-left: 0;
    padding-top: 3px;
  }

  .topic-meta {
    float: left;
  }

  .topic-actions {
    grid-area: actions;
    float: right;
    justify-content: flex-end;
    text-align: right;
    vertical-align: bottom;
  }
}

.topic-thumbnail {
  float: left;
  padding-right: 15px;

  .no-thumbnail {
    display: none;
  }
}

.mobile-view .portfolio-button {
  display: none;
}

